--- a/Pobezhdatel/Web.config
+++ b/Pobezhdatel/Web.config
@@ -1,9 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Дополнительные сведения о настройке приложения ASP.NET см. по адресу:
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings configSource="ConnectionStrings.config" />
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
