--- a/Pobezhdatel/Pobezhdatel.csproj
+++ b/Pobezhdatel/Pobezhdatel.csproj
@@ -166,6 +166,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="ConnectionStrings.config" />
+    <None Include="Properties\PublishProfiles\CommonPublish.pubxml" />
     <None Include="Properties\PublishProfiles\SimplePublish.pubxml" />
     <None Include="Scripts\JQuery\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\Bootstrap\bootstrap.js" />
