--- a/Pobezhdatel/Pobezhdatel.csproj
+++ b/Pobezhdatel/Pobezhdatel.csproj
@@ -203,7 +203,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\ChatHub.cs" />
-    <Compile Include="Models\LoginModel.cs" />
+    <Compile Include="Models\GameModel.cs" />
     <Compile Include="Models\MessageModel.cs" />
     <Compile Include="Models\PobezhdatelDbModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
