Now user name is taken from log in page.

--- a/Pobezhdatel/Pobezhdatel.csproj
+++ b/Pobezhdatel/Pobezhdatel.csproj
@@ -230,9 +230,7 @@
       <DependentUpon>PobezhdatelDb.dbml</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\Base\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
