--- a/Pobezhdatel/Pobezhdatel.csproj
+++ b/Pobezhdatel/Pobezhdatel.csproj
@@ -215,6 +215,7 @@
     <Content Include="packages.config" />
     <Content Include="Views\Room\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutRoom.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
