--- a/Pobezhdatel/Web.config
+++ b/Pobezhdatel/Web.config
@@ -14,6 +14,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Login" timeout="240" />
+    </authentication>
+    <sessionState timeout="240" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
