--- a/Pobezhdatel/Pobezhdatel.csproj
+++ b/Pobezhdatel/Pobezhdatel.csproj
@@ -204,7 +204,7 @@
     </Compile>
     <Compile Include="Hubs\ChatHub.cs" />
     <Compile Include="Hubs\Utilities.cs" />
-    <Compile Include="Models\GameModel.cs" />
+    <Compile Include="Models\PlayerLoginModel.cs" />
     <Compile Include="Models\MessageModel.cs" />
     <Compile Include="Models\PobezhdatelDbModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
